@@ -109,7 +109,28 @@ NOTE: You need to include C<wing.confirmations> in the data section of your app 
     });
 
 
+=head2 luxon-date-time
+
+A date time field editor.
+
+ <date-time v-model="race.properties.start_date"></date-time>
+
+=over 
+
+=item v-model
+
+The property to edit.
+
+=item id
+
+Add a DOM id to the control. Optional. Will be autogenerated if not set.
+
+=back
+
+
 =head2 date-time
+
+NOTE: This has been depricated. Use luxon-date-time instead.
 
 A date time field editor.
 
@@ -285,6 +306,8 @@ L<https://github.com/freearhey/vue2-filters>
 
 =head2 moment
 
+NOTE: This has been depricated, use C<wing.format_date()> instead.
+
 Converts a date into a human readable string that you can format.
 
 You need to load L<https://momentjs.com> to use this filter.
@@ -316,6 +339,8 @@ Does preceision rounding on a number.
  {{some_number | round(2) }} // 3.14
 
 =head2 timeago
+
+NOTE: This has been depricated, use C<wing.format_timeago()> instead.
 
 Converts a date into a human readable string like C<3 minutes ago>.
 
@@ -1405,12 +1430,110 @@ Optional. Defaults to C<window.location.href>.
 
 =back
 
+
+=head2 wing.date2luxon(input, timezone)
+
+Takes any number of date-looking inputs, and converts them into a Luxon object.
+
+Requires L<https://moment.github.io/luxon/> to work.
+
+=over
+
+=item input
+
+Something that looks like a date. It can take many different forms:
+
+=over
+
+=item parsable array
+
+The first element of the array is string representing a date, and the second element is a pattern for parsing that string.
+
+ ['2001/15/05','yyyy/dd/LL']
+
+=item epoch
+
+A number of seconds since the January 1, 1970. Aka the unix epoch.
+
+=item wing datetime string
+
+The natural output of a datetime field from Wing's Rest API.
+
+ 2017-01-03 13:03:17
+
+=item wing date string
+
+The natural output of a date field from Wing's Rest API. Rarely used.
+
+ 2017-01-03
+
+=item Luxon Object
+
+A Luxon object.
+
+ moment()
+
+=item Javascript Date Object
+
+A javascript Date object.
+
+ new Date()
+
+=back
+
+=item timezone
+
+A timezone string like C<America/Chicago> to convert the date to. Wing datetime fields are stored in C<UTC>. Ignored on existing Luxon and Javascript date objects as it's assumed those already have a valid timezone.
+
+=back
+
+
+=head2 wing.format_date(wing_date_string, format_string, timezone)
+
+Requires Luxon.
+
+Formats a date string into something more human friendly.
+
+=over
+
+=item wing_date_string
+
+A wing date string in the format of C<2020-11-17 01:14:32>.
+
+=item format_string
+
+A format string parsable by Luxon. Defaults to C<LLLL d yyyy> (aka November 17, 2020).
+
+=item timezone
+
+A timezone parsable by Luxon. Defaults to C<local>
+
+=back
+
+
+=head2 wing.format_timeago(wing_date_string)
+
+Requires Luxon.
+
+Formats a wing date string into something like C<5 minutes ago>.
+
+=over
+
+=item wing_date_string
+
+A wing date string in the format of C<2020-11-17 01:14:32>.
+
+=back
+
+
+
 =head2 wing.parse_date(input, timezone)
+
+NOTE: This has been depricated. Use C<date2luxon> instead.
 
 Takes any number of date-looking inputs, and converts them into a Moment.js object.
 
 Requires L<https://momentjs.com/> to work.
-
 
 =over
 
@@ -1463,6 +1586,7 @@ A timezone string like C<America/Chicago> to convert the date to. Wing datetime 
 To use the timezome field you must also load L<https://momentjs.com/timezone/>.
 
 =back
+
 
 =head2 wing.string_random(length)
 
