@@ -4,6 +4,12 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-11-17
+ * Added format_date(), format_timeago(), date2luxon() in wing.vue.js.
+ * Depricated the datetime and timeago filters in wing.vue.js.
+ * Added the <luxon-date-time> component in wing.vue.js.
+ * Depricated the <date-time> component in wing.vue.js.
+
 2020-11-15
  * Emit change event for wing-select and wing-select-new components in wing.vue.js.
  * Some bug fixes in wing class --add and --template templates.
